# phzipcodes-web

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
app/: __init__.py  config.py  main.py  views.py
app/routers/: __init__.py  views.py
src/app/: __init__.py  config.py  main.py  views.py
src/static/: sitemap.xml
src/static/css/: styles.css
src/templates/: base.html  contact.html  index.html  provinces.html  regions.html
src/templates/components/: back_to_top.html  footer.html  header.html
src/templates/partials/: municipalities_grid.html  provinces_grid.html  regions_grid.html  results.html
static/css/: fonts.css  styles.css
templates/: base.html  contact.html  index.html  municipalities.html  provinces.html  regions.html
templates/components/: back_to_top.html  breadcrumbs.html  contact_response.html  footer.html  header.html  municipalities_grid.html  provinces_grid.html  regions_grid.html  results.html  search.html
templates/partials/: municipalities_grid.html  provinces_grid.html  regions_grid.html  results.html
tests/: conftest.py  test_contact.py  test_home.py  test_municipalities.py  test_provinces.py  test_regions.py
