[project]
name = "phzipcodes-web"
version = "0.1.0"
description = "Philippines Zip Codes Lookup Portal"
authors = [{ name = "Jayson", email = "jsoncp@proton.me" }]
license = { text = "MIT" }
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "jinja2>=3.1.5",
    "phzipcodes>=0.1.6",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.10",
    "playwright>=1.50.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"